--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <html>
  
 <body>
-  <h1>Igor Silva Anholeto</h1>
-  <p>Welcome to my website!</p>
+  <div class="header">
+  <div class="sides">
+    <a href="#" class="logo">BLOG</a>
+  </div>
+  <div class="sides"> <a href="#" class="menu"> </a></div>
+  <div class="info">
+  <h4><a href="#category">My portifolio</a></h4>
+    <h1>Igor Silva Anholeto</h1>
+    <div class="meta">
+      <a  href="https://github.com/igoranholeto" target="_b" class="author"></a><br>
+      By <a href="https://www.linkedin.com/in/igor-s-a38624b3/" target="_b">Igor S. Anholeto</a> on May 30, 2019
+    </div>
+  </div>
+</div>
+<section class="content">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nisl turpis, porttitor et finibus id, viverra a metus. Praesent non ante sed orci posuere varius quis sit amet dui. Cras molestie magna orci, id gravida dolor molestie in. Duis sollicitudin turpis quis tortor egestas, ut ultrices nisl elementum. Vestibulum sed ipsum eget nulla laoreet cursus in ac sem. Integer a suscipit justo, quis aliquam sapien. Maecenas et tellus nibh. Vivamus tincidunt eros id commodo pellentesque.</p>
+  <p align="center"><a href="https://www.linkedin.com/in/igor-s-a38624b3/" class="btn twtr" target="_b">Follow me on LinkedIn</a>
+  </p>
+</section>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
