--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ a{
   width:50px;
   height:50px;
   border-radius:50%;
-  background:url(https://i.imgur.com/6DLCsZcb.jpg) center no-repeat;
+  background:url(https://media.licdn.com/dms/image/C4D03AQFgHlX7vbBR7Q/profile-displayphoto-shrink_800_800/0/1573496967240?e=1694649600&v=beta&t=rCdG7lODxyRIAMQ5Mik0vO9SAYZ77MjzGkpIFUy9tvw) center no-repeat;
   background-size:cover;
   box-shadow:0 2px 3px rgba(0,0,0,0.3);
   margin-bottom:3px
@@ -163,7 +163,7 @@ a{
   </div>
 </div>
 <section class="content">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nisl turpis, porttitor et finibus id, viverra a metus. Praesent non ante sed orci posuere varius quis sit amet dui. Cras molestie magna orci, id gravida dolor molestie in. Duis sollicitudin turpis quis tortor egestas, ut ultrices nisl elementum. Vestibulum sed ipsum eget nulla laoreet cursus in ac sem. Integer a suscipit justo, quis aliquam sapien. Maecenas et tellus nibh. Vivamus tincidunt eros id commodo pellentesque.</p>
+<p>I have some courses and computer and a big dream</p>
   <p align="center"><a href="https://www.linkedin.com/in/igor-s-a38624b3/" class="btn twtr" target="_b">Follow me on LinkedIn</a>
   </p>
 </section>
