--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ a{
 <body>
   <div class="header">
   <div class="sides">
-    <a href="#" class="logo">BLOG</a>
+    <a href="#" class="logo">Projects</a>
   </div>
   <div class="sides"> <a href="#" class="menu"> </a></div>
   <div class="info">
@@ -163,7 +163,7 @@ a{
   </div>
 </div>
 <section class="content">
-<p>I have some courses and computer and a big dream</p>
+<p>I have some courses , a computer & a big dream</p>
   <p align="center"><a href="https://www.linkedin.com/in/igor-s-a38624b3/" class="btn twtr" target="_b">Follow me on LinkedIn</a>
   </p>
 </section>
