--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ a{
 
 .twtr{
   margin-top:100px
-}.btn.twtr:after{content:"\1F426";padding-left:5px}
+}.btn.twtr:after{content:"https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/LinkedIn_icon_circle.svg/800px-LinkedIn_icon_circle.svg.png";padding-left:5px}
   </style>
 
   <!-- Content Starts Here -->
@@ -167,7 +167,7 @@ a{
   <p align="center"><a href="https://www.linkedin.com/in/igor-s-a38624b3/" class="btn twtr" target="_b">Follow me on LinkedIn</a>
   </p>
 </section>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+
 </body>
  
 </html>
