--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ a{
 <p>I have some courses , a computer & a big dream</p>
   <p align="center"><a href="https://www.linkedin.com/in/igor-s-a38624b3/" class="btn twtr" target="_b">Follow me on LinkedIn</a>
   </p>
-<audio controls autoplay>
+<audio controls autoplay muted>
   <source src="Lost-and-Found.mp3" type="audio/mpeg">
 </audio>
 
