--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@ a{
 .twtr{
   margin-top:100px
 }
+
+ .audio{
+  position: fixed;
+  left: 0;
+  bottom:0;
+ }
   </style>
 
   <!-- Content Starts Here -->
@@ -166,7 +172,7 @@ a{
 <p>I have some courses , a computer & a big dream</p>
   <p align="center"><a href="https://www.linkedin.com/in/igor-s-a38624b3/" class="btn twtr" target="_b">Follow me on LinkedIn</a>
   </p>
-<audio controls autoplay muted>
+<audio controls>
   <source src="Lost-and-Found.mp3" type="audio/mpeg">
 </audio>
 
